--- a/portf/src/Container/About/AboutMe.css
+++ b/portf/src/Container/About/AboutMe.css
@@ -20,7 +20,7 @@
   left: -50%;
   width: 200%;
   height: 200%;
-  background: radial-gradient(circle at center, rgba(255, 218, 30, 0.1), transparent 60%);
+  background: radial-gradient(circle at center, rgb(231, 214, 133), transparent 60%);
   animation: rotate 20s linear infinite;
   z-index: 0;
 }
